Splitting the Data into Training and Testing Data

--- a/notebook/Dehli-Indian-Housing-Analysis-Part-4-Predict-Price-with-Location-Name-and-with-House-Type.ipynb
+++ b/notebook/Dehli-Indian-Housing-Analysis-Part-4-Predict-Price-with-Location-Name-and-with-House-Type.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "955b5f74-115f-4353-94d3-b2cd644c190a",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,9 @@
     "\n",
     "#For One Hot Encoding Categorical Features\n",
     "from category_encoders import OneHotEncoder\n",
+    "\n",
+    "#For splitting the Data into Training and Test Data\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "#For Model Building\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
@@ -426,8 +429,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "300dc528-fdc7-45f3-8efc-5437e895f48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2171 entries, 0 to 2170\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   house_type  2171 non-null   object\n",
+      " 1   location    2171 non-null   object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 34.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the number of Non Null Values in the Features of Interest\n",
+    "\n",
+    "housing_df[[\"house_type\", \"location\"]].info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "080cfa4b-b943-48f1-a728-f81de41e5a9d",
+   "metadata": {},
+   "source": [
+    "There are no Null Values within those Features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce7b058f-eaa2-496e-be99-f314a6940318",
+   "metadata": {},
+   "source": [
+    "## 3. Split Data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1314b09-7527-428f-947d-f6192da3c238",
+   "metadata": {},
+   "source": [
+    "### Splitting Data for Location Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b598f21-2ff5-42a3-9cdd-b72bc4f963dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_loc:\n",
+      "                 location\n",
+      "555                Saket\n",
+      "1435        Vasant Vihar\n",
+      "588        Gulmohar park\n",
+      "1532  Safdarjung Enclave\n",
+      "20         Anand Niketan\n",
+      "X_test_loc:\n",
+      "              location\n",
+      "1652         Jor bagh\n",
+      "342      Sunder Nagar\n",
+      "1342  Panchsheel Park\n",
+      "765     Anand Niketan\n",
+      "865      Vasant Vihar\n",
+      "y_train_loc:\n",
+      " 555     3510.05\n",
+      "1435    3512.41\n",
+      "588     3511.12\n",
+      "1532    7463.90\n",
+      "20      4222.55\n",
+      "Name: price_approx_usd, dtype: float64\n",
+      "y_test_loc:\n",
+      " 1652    5877.04\n",
+      "342     3509.93\n",
+      "1342     757.93\n",
+      "765     3509.93\n",
+      "865     3509.92\n",
+      "Name: price_approx_usd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting Data for Location Feature\n",
+    "feature = [\"location\"]\n",
+    "target = \"price_approx_usd\"\n",
+    "X_loc = housing_df[feature]\n",
+    "y_loc = housing_df[target] \n",
+    "\n",
+    "X_train_loc, X_test_loc, y_train_loc, y_test_loc = train_test_split(X_loc, y_loc, test_size=0.2, random_state=42)  # test_size=0.2 means 20% of data goes to test set\n",
+    "\n",
+    "#Confirm the Split \n",
+    "print(\"X_train_loc:\\n\", X_train_loc.head())\n",
+    "print(\"X_test_loc:\\n\", X_test_loc.head())\n",
+    "print(\"y_train_loc:\\n\", y_train_loc.head())\n",
+    "print(\"y_test_loc:\\n\", y_test_loc.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bc923c4-c830-4836-95ec-04ba027eca0b",
+   "metadata": {},
+   "source": [
+    "### Splitting Data for House Type Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ac255b21-3901-4a33-8a32-e7a1ddfbb31a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_hse_type:\n",
+      "               house_type\n",
+      "555   Independent Floor \n",
+      "1435  Independent Floor \n",
+      "588   Independent Floor \n",
+      "1532  Independent House \n",
+      "20    Independent Floor \n",
+      "X_test_hse_type:\n",
+      "               house_type\n",
+      "1652  Independent Floor \n",
+      "342   Independent Floor \n",
+      "1342  Independent Floor \n",
+      "765   Independent Floor \n",
+      "865   Independent Floor \n",
+      "y_train_hse_type:\n",
+      " 555     3510.05\n",
+      "1435    3512.41\n",
+      "588     3511.12\n",
+      "1532    7463.90\n",
+      "20      4222.55\n",
+      "Name: price_approx_usd, dtype: float64\n",
+      "y_test_hse_type:\n",
+      " 1652    5877.04\n",
+      "342     3509.93\n",
+      "1342     757.93\n",
+      "765     3509.93\n",
+      "865     3509.92\n",
+      "Name: price_approx_usd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting Data for Location Feature\n",
+    "feature = [\"house_type\"]\n",
+    "target = \"price_approx_usd\"\n",
+    "X_hse_type = housing_df[feature]\n",
+    "y_hse_type = housing_df[target] \n",
+    "\n",
+    "X_train_hse_type, X_test_hse_type, y_train_hse_type, y_test_hse_type = train_test_split(X_hse_type, y_hse_type, test_size=0.2, random_state=42)  # test_size=0.2 means 20% of data goes to test set\n",
+    "\n",
+    "#Confirm the Split \n",
+    "print(\"X_train_hse_type:\\n\", X_train_hse_type.head())\n",
+    "print(\"X_test_hse_type:\\n\", X_test_hse_type.head())\n",
+    "print(\"y_train_hse_type:\\n\", y_train_hse_type.head())\n",
+    "print(\"y_test_hse_type:\\n\", y_test_hse_type.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7caf1f99-e382-46df-9a3d-997457aa79c5",
    "metadata": {},
    "outputs": [],
    "source": []
